--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: lbm_plugin
 description: A new Flutter plugin.
 version: 0.0.1
-author: lbmsolutions22@gmail.com
-homepage: http://www.lbmsolutions.in
+homepage: https://github.com/Lbm22/lbm_plugin.git
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
