--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: lbm_plugin
 description: A new Flutter plugin.
-version: 0.2.2
+version: 0.2.3
 homepage: https://github.com/Lbm22/lbm_plugin.git
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.20.0 <2.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+1
+  http:  ^0.13.3
 
 dev_dependencies:
   flutter_test:
